strange behavior on the bottom two content cards. When the title div is removed causes the divs to be misaligned in desktop. Workaround and just made them translucent. Will fix it later.

--- a/styles/main.css
+++ b/styles/main.css
@@ -579,8 +579,8 @@ input[type="text"]{
 .title {
     margin: 0px;
     padding-left: 5px;
-    background-color:rgb(9, 9, .8);
-    border: 1px solid rgb(248, 244, 244);
+    background-color:rgba(238, 238, 235, 0.0);
+    border: 0px solid rgba(248, 244, 244, 0.1);
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
     height: 25px;
@@ -588,7 +588,6 @@ input[type="text"]{
     line-height: 20px;
     font-size: 13px;
     font-weight: bolder;
-    color: white;
 }
 
 @media screen and (max-width: 996px) {
